--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     },
     "name": "bee",
     "description": "Redis-based job server",
-    "version": "0.0.1",
+    "version": "0.0.2g",
     "main": "./lib/index",
     "engines": {
         "node": ">=0.8.16"
