Changed package name back to bee

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
         "name": "Oleksiy Krivoshey",
         "email": "<oleksiyk@gmail.com>"
     },
-    "name": "bee-job-server",
+    "name": "bee",
     "description": "Redis-based job server for Node",
     "version": "0.0.2",
     "main": "./lib/index",
