--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "hiredis": "~=0.1.15",
         "redis": "~=0.8.5",
         "node-uuid": "~=1.4.1",
-        "bluebird": "~0.11.x"
+        "bluebird": "~1.0.0"
     },
     "devDependencies":{
         "chai": "~=1.8.0",
